# vkrepo

./: .gitignore  CMakeLists.txt
data/: vulkan_object_note.md  vulkan_sync_note.md
engine/: renderer.cpp  renderer.h  scene.h
engine/render/: vulkan_context.cpp  vulkan_manager.cpp  vulkan_mesh.h  vulkan_pass.cpp  vulkan_pass.h  vulkan_util.cpp
example/: hello_rect.cpp  vk_render_test.cpp
render/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_context.cpp  vulkan_context.h  vulkan_manager.cpp  vulkan_manager.h  vulkan_pass.cpp  vulkan_pass.h  vulkan_util.cpp  vulkan_util.h
tests/: split_sum_approx.cpp  vk_render_test.cpp
workdir/shaders/: shader.frag  shader.vert
workdir/shaders/test_pass/: test.frag  test.vert
